--- a/examples/index.html
+++ b/examples/index.html
@@ -1,1 +1,2 @@
-<script type="module" src="/lib/es6_global/examples/TestModule_4.bs.js"></script>
+<script type="module" src="/lib/es6_global/examples/TestModule_5.bs.js"></script>
+<div id="sample"></div>
