--- a/examples/index.html
+++ b/examples/index.html
@@ -1,2 +1,3 @@
-<script type="module" src="/lib/es6_global/examples/TestModule_6.bs.js"></script>
+<script src="/vendor/setImmediate.js"></script>
+<script type="module" src="/lib/es6_global/examples/TestModule_5.bs.js"></script>
 <div id="sample"></div>
