+[examples] Add EventHandler to Game

--- a/examples/game/index.html
+++ b/examples/game/index.html
@@ -1,5 +1,5 @@
 <script src="/vendor/setImmediate.js"></script>
 <script type="module" src="/lib/es6_global/examples/game/Main.bs.js"></script>
 <body id="screen" style="margin: 0;">
-<canvas id="game"></canvas>
+<canvas id="game" style="width: 100%; height: 100%;"></canvas>
 </body>
