+[examples] Fix Game Renderer
Now the canvas is screen-wide and coordinates for the mouse clicks are
alright!

--- a/examples/game/index.html
+++ b/examples/game/index.html
@@ -1,5 +1,5 @@
 <script src="/vendor/setImmediate.js"></script>
 <script type="module" src="/lib/es6_global/examples/game/Main.bs.js"></script>
-<body id="screen" style="margin: 0;">
-<canvas id="game" width="1000" height="1000"></canvas>
+<body id="screen" style="margin: 0; width: 100%; height: 100%; overflow: hidden;">
+<canvas id="game" width="1000" height="1000" style="scale: none;"></canvas>
 </body>
