--- a/examples/koans/E5_ProcessesForTheDOM.re.html
+++ b/examples/koans/E5_ProcessesForTheDOM.re.html
@@ -1,3 +1,3 @@
 <script src="/vendor/setImmediate.js"></script>
-<script type="module" src="/lib/es6_global/examples/E5_ProcessesForTheDOM.bs.js"></script>
+<script type="module" src="/koans/lib/koans/es6_global/koans/examples/koans/E5_ProcessesForTheDOM.bs.js"></koans/script>
 <div id="sample"></div>
